tests/profile/error/module/missing_name.profile
{
  "version": { "major": 1, "minor": 0 },
  "modules": [
    {
      "loadedInstruction": "instr"
    }
  ]
}
